--- a/styles.css
+++ b/styles.css
@@ -489,3 +489,15 @@ article {
     pointer-events: none;
   }
 }
+/* 
+devjobs-avatar {
+  display: block;
+}
+
+.avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid var(--primary-light);
+} */
