--- a/02-react/src/components/Pagination.module.css
+++ b/02-react/src/components/Pagination.module.css
@@ -15,18 +15,18 @@
     border-radius: 0.375rem;
     transition: all .3s;
 
-    &:hover, &:focus {
+    &:hover {
       background-color: #fff;
     }
 
     &:active {
       transform: scale(0.90);
     }
-  }
-}
 
-.isActive {
-    background-color: var(--primary-light);
-    color: white;
-    pointer-events: none;
+    &.isActive {
+      background-color: var(--primary-light);
+      color: white;
+      pointer-events: none;
+    }
+  }
 }
