Link.jsx dinamico y template de Contact.jsx

--- a/src/index.css
+++ b/src/index.css
@@ -152,6 +152,10 @@ nav {
       color: var(--primary);
       outline: none;
     }
+
+    &.isActive {
+      color: var(--primary-light);
+    }
   }
 }
 
